--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         .vid { border: 1px solid grey; }
     </style>
 </head>
-<body>
+<body onload="init()">
     <div>
         <div>Manually Transferring the offer/answer data-transfer (WebRTC)</div>
         <div id="peer1">
@@ -25,7 +25,6 @@
             <button onclick="addAnswer()">add answer</button>
         </div>
     </div>
-
     <script>
         let peerConnection = new RTCPeerConnection({
             iceServers :[
@@ -57,8 +56,6 @@
                 console.log('Error accessing user media',err);
             })
         };
-
-        init();
         
 
         const generateOffer= ()=>{
